# noise-generator

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: build.yml
android/: AndroidManifest.xml
android/res/values/: ic_launcher_background.xml
linux/: io.melechtna.noise-generator.desktop  io.melechtna.noise-generator.metainfo.xml
scripts/: android-cheat-icons.sh  android-cheat.sh
src/: bass_boost.rs  biquad.rs  config.rs  dsp.rs  lib.rs  main.rs
src/ui/: accentslider.slint  alpha.slint  bands.slint  bassboost.slint  main.slint  numberfield.slint  section.slint  seed.slint  settings.slint  toggleswitch.slint  ui.slint  volume.slint
src/ui/icons/: icon.icns
